# reproduct_snapper

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
memory/: chat_history cursor_bounding_box_adjustment_model_1.md  development_chronicle.md  implementation_analysis.md
runs-archives/run_20250602-162525/: events.out.tfevents.1748849125.iip-20240326.16332.0  expt_conditions.md
runs-archives/run_20250603-121309/: events.out.tfevents.1748920389.iip-20240326.63132.0
runs-archives/run_20250609-180559/: experiment_conditions.md
runs/run_20250603-121309/: expt_conditions.md
src/: config.py  dataset.py  inference.py  models.py  resume_example.md  resume_train.py  train.py  utils.py
src/analysis_tools/: preprocessing_comparison.md  preprocessing_comparison.py  run_preprocessing_analysis.py
src/analysis_tools/validation_analysis_results/: validation_analysis.json  validation_analysis_report.txt
